divisible fix1

--- a/js/divisible/style.css
+++ b/js/divisible/style.css
@@ -29,6 +29,7 @@ input[type="number"] {
     border-radius: 0.3em;
     box-shadow: var(--shadow);
     transform: translateY(-0.5em);
+    color: var(--text);
 }
 
 input[type="number"]:focus {
